# vocechat-server-rust-uu

./: .dockerignore  AGENTS.md  Cargo.toml  README.md  design.md
crates/msgdb/src/: db.rs  lib.rs  messages.rs
crates/open-graph/src/: fetcher.rs
crates/voce-e2ee-core/: .gitignore  Cargo.toml  README.md  target-report.json
crates/voce-e2ee-core/ffi_smoke/: voce_e2ee_ffi_methods.dart
crates/voce-e2ee-core/scripts/: build-targets.sh  build-wasm.ps1  build-wasm.sh  build-windows.ps1  ffi-smoke.ps1
crates/voce-e2ee-core/src/: deferred.rs  envelope.rs  error.rs  ffi.rs  identity.rs  kdf.rs  lib.rs  pad.rs  ratchet.rs  sender_keys.rs  v1_compat.rs  x3dh.rs
crates/voce-e2ee-core/src/mls/: application.rs  commands.rs  mod.rs
crates/voce-e2ee-core/testdata/: cross-client-deferred-dm-fixture.json  e2ee-v2-text-vector.json
crates/voce-e2ee-core/tests/: cross_client_deferred_dm_fixture.rs  deferred_envelope.rs  mls_application.rs  mls_commands.rs  mls_interop.rs  x3dh_vector.rs
deploy/minewire/: README.md  docker-compose.yml  install-wsl.sh  server.yaml.example  start-minewire.ps1  start-wsl.sh  verify-listen.sh
deploy/sing-box-reality/: README.md  client.json.example  config.json.example  docker-compose.yml  integrate-with-e2e.md
docs/: MINEWIRE_TUNNEL.md  SECURITY_E2E_AND_OBFUSCATION.md
docs/superpowers/plans/: 2026-07-13-e2e-mvp.md  2026-07-14-e2e-full-docker-win.md  2026-07-16-e2ee-phase-c.md  2026-07-16-e2ee-phase-d.md  2026-07-16-e2ee-v2-remaining-estimate.md  2026-07-20-web-e2ee-image.md  2026-07-21-e2ee-reliability-and-bot.md
docs/superpowers/specs/: 2026-07-14-minewire-ops-sidecar-design.md  2026-07-17-metadata-and-anti-blocking-design.md  2026-07-20-web-e2ee-image-and-android-release-design.md  2026-07-21-e2ee-reliability-and-bot-design.md
migrations/: 20260713120000_e2e.sql  20260714160000_e2e_default_on.sql  20260716120000_e2e_device_link.sql  20260717000100_mls_delivery.sql  20260718010000_e2ee_v2_mls_sequence.sql  20260718020000_remove_legacy_e2ee_delivery.sql  20260719010000_version_e2e_backup.sql  20260721120000_e2e_pending_envelope.sql  20260721130000_e2e_pending_identity_version.sql  20260721140000_bot_e2ee.sql
src/: bot_e2ee.rs  config.rs  create_user.rs  e2ee_v2.rs  main.rs  mls_delivery.rs  password_hash.rs  server.rs  state.rs  test_harness.rs
src/api/: admin_agora.rs  admin_login.rs  admin_system.rs  admin_user.rs  archive.rs  bot.rs  e2e.rs  group.rs  message.rs  mls.rs  mod.rs  resource.rs  token.rs  user.rs
