[package]
name = "voce-e2ee-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Shared E2EE v2 crypto core for VoceChat (WASM + FFI)"
repository = "https://github.com/dc-daichao95/vocechat-server-rust-uu"

[lib]
crate-type = ["cdylib", "rlib"]
name = "voce_e2ee_core"

[features]
default = []
# Enable for `wasm-pack build --features wasm`
wasm = ["dep:wasm-bindgen", "dep:console_error_panic_hook", "getrandom/js"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
base64 = "0.22"
zeroize = { version = "1.8", features = ["derive"] }
rand = "0.8"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets", "getrandom"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
p256 = { version = "0.13", features = ["ecdh", "ecdsa"] }
elliptic-curve = { version = "0.13", features = ["ecdh"] }
getrandom = "0.2"

wasm-bindgen = { version = "0.2.100", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
hex = "0.4"
